--- a/.github/workflows/pipelinePruebas.yml
+++ b/.github/workflows/pipelinePruebas.yml
@@ -25,7 +25,8 @@ jobs:
     - name: Instalación de librerías y dependencias
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt       
+        pip install -r flaskr/requirements.txt   
+
     - name: Correr pruebas
       id: correr-pruebas
       run: python -m unittest
