--- a/.github/workflows/pipelinePruebas.yml
+++ b/.github/workflows/pipelinePruebas.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         cd flaskr
         python -m pip install --upgrade pip
-        pip install -r requirements.txt   
+        python -m pip install -r requirements.txt   
 
     - name: Correr pruebas
       id: correr-pruebas
