--- a/.github/workflows/pipelinePruebas.yml
+++ b/.github/workflows/pipelinePruebas.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Instalación de librerías y dependencias
       run: |
         cd flaskr
+        pwd
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt   
 
