--- a/.github/workflows/pipelinePruebas.yml
+++ b/.github/workflows/pipelinePruebas.yml
@@ -24,10 +24,8 @@ jobs:
           python-version: '3.7'
     - name: Instalación de librerías y dependencias
       run: |
-        cd flaskr
-        pwd
         python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt   
+        python -m pip install -r flaskr/requirements.txt    
 
     - name: Correr pruebas
       id: correr-pruebas
