--- a/.github/workflows/pipelinePruebas.yml
+++ b/.github/workflows/pipelinePruebas.yml
@@ -24,8 +24,9 @@ jobs:
           python-version: '3.7'
     - name: Instalación de librerías y dependencias
       run: |
+        working-directory: ./flaskr
         python -m pip install --upgrade pip
-        python -m pip install -r flaskr/requirements.txt    
+        python -m pip install -r requirements.txt    
 
     - name: Correr pruebas
       id: correr-pruebas
