--- a/.github/workflows/pipelinePruebas.yml
+++ b/.github/workflows/pipelinePruebas.yml
@@ -26,7 +26,7 @@ jobs:
       working-directory: ./flaskr
       run: |
         python -m pip install --upgrade pip
-        python pip install flask==1.1.2
+        python -m pip install flask==1.1.2
     - name: Correr pruebas
       id: correr-pruebas
       run: python -m unittest
