--- a/.github/workflows/pipelinePruebas.yml
+++ b/.github/workflows/pipelinePruebas.yml
@@ -15,6 +15,8 @@ jobs:
   job1:
     name: Pruebas
     runs-on: ubuntu-latest
+    env: 
+      working-directory: ./flaskr
     steps:
     - name: Checkout de repositorio
       uses: actions/checkout@v2
@@ -23,10 +25,10 @@ jobs:
       with:
           python-version: '3.7'
     - name: Instalación de librerías y dependencias
-      working-directory: ./flaskr
+      
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flask==1.1.2
+        python -m pip install -r requirements.txt
     - name: Correr pruebas
       id: correr-pruebas
       run: python -m unittest
