--- a/.github/workflows/pipelinePruebas.yml
+++ b/.github/workflows/pipelinePruebas.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Instalación de librerías y dependencias
       
       run: |
+        working-directory:${{env.working-directory}}
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
     - name: Correr pruebas
