--- a/.github/workflows/pipelinePruebas.yml
+++ b/.github/workflows/pipelinePruebas.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         working-directory:${{env.working-directory}}
         python -m pip install --upgrade pip
+        python find . -regex '.*requirements.txt$'
         python -m pip install -r requirements.txt
     - name: Correr pruebas
       id: correr-pruebas
