--- a/.github/workflows/pipelinePruebas.yml
+++ b/.github/workflows/pipelinePruebas.yml
@@ -14,8 +14,10 @@ jobs:
       with:
           python-version: '3.7'
     - name: Instalación de librerías y dependencias 
+      working-directory: ./flaskr
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Correr pruebas
       id: correr-pruebas
       run: python -m unittest
